--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
+    "formik": "^2.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.8.0",
+    "reactstrap": "^9.2.3",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
